# price_fetcher

price_fetcher/: main.py  poetry_installer  pyproject.toml  readme.md  testing.py
price_fetcher/src/configs/: fetch_config.py  interactor_config.yaml
price_fetcher/src/errors/: api_error.py
price_fetcher/src/interactor/: base_interactor.py  okx_interactor.py
price_fetcher/src/models/: schema.py
price_fetcher/src/validations/: response_validation.py
price_fetcher/test/: test_integration.py
price_fetcher/test/configs/: test_fetch_config.py
price_fetcher/test/errors/: test_api_error.py
price_fetcher/test/interactor/: test_okx_interactor.py
